# mlops-mini-project

./: .gitignore  Dockerfile  README.md  codedeploy.sh  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  run_container.sh  setup.py  setup.sh  test.py
.dvc/: config
.github/workflows/: ci.yaml
deploy/scripts/: start_docker.sh
docs/: conf.py
flask_app/: app.py  requirements.txt
flask_app/templates/: index.html
mlruns/0/: meta.yaml
mlruns/745786804914821454/: meta.yaml
mlruns/745786804914821454/f38f7a4599594577aca6e79f94179982/: meta.yaml
mlruns/745786804914821454/f38f7a4599594577aca6e79f94179982/artifacts/: experiment_info.json  metrics.json
mlruns/745786804914821454/f38f7a4599594577aca6e79f94179982/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/745786804914821454/f38f7a4599594577aca6e79f94179982/metrics/: accuracy  auc  precision  recall
mlruns/745786804914821454/f38f7a4599594577aca6e79f94179982/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/models/test/: meta.yaml
mlruns/models/test/version-1/: meta.yaml
models/: vectorizer.pkl
notebooks/: dagshub_setup.ipynb  lor_vs_gbdt.py  model.pkl  tfidf_vs_bow.py
scripts/: promote_model.py
src/models/: model_evaluation.py  register_model.py
tests/: test_model.py
