[project]
name = "emotion-detection"
version = "0.1.0"
description = "A data science project following the Cookiecutter structure and managed with uv"
authors = [
  { name = "Soham Mukherjee", email = "soumyapu31@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "seaborn",
  "jupyter",
  "ipykernel",
  "notebook",
  "jupyterlab",
  "pyyaml",
  "tqdm",
  "python-dotenv>=1.1.1",
  "pydantic>=2.11.7",
  "dvc>=3.61.0",
  "mlflow==2.9.2",
  "dagshub>=0.6.1",
  "nltk>=3.9.1",
  "httpx>=0.28.1",
  "xgboost>=2.1.4",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "pytest",
  "ipython",
  "mypy"
]

[tool.uv]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
